--- a/server/build.gradle
+++ b/server/build.gradle
@@ -6,3 +6,8 @@ node {
 task runServer(type: NodeTask, dependsOn: 'npmInstall') {
     script = file('src/node/server.js')
 }
+
+
+task runTestServer(type: NodeTask, dependsOn: 'npmInstall') {
+    script = file('src/node/testServer.js')
+}
