--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Nerdproject game server",
   "main": "src/node/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo node src/node/testServer.js && exit 1"
   },
   "author": "napiorkowskim",
   "license": "GPL",
