--- a/ios/robovm.properties
+++ b/ios/robovm.properties
@@ -1,6 +1,6 @@
 app.version=1.0
-app.id=com.nerds.nerdproject
-app.mainclass=com.nerds.nerdproject.IOSLauncher
+app.id=com.mygdx.game
+app.mainclass=com.mygdx.game.IOSLauncher
 app.executable=IOSLauncher
 app.build=1
-app.name=nerdproject
+app.name=my-gdx-game
